# Platform-Engineering-Self-Service-IDP-

./: README.md  docker-compose.yml
cli/: Cargo.toml  Dockerfile
cli/src/: main.rs
cli/src/api_client/: mod.rs
cli/src/commands/: cost.rs  deploy.rs  logs.rs
control-plane/: Dockerfile  go.mod
control-plane/cmd/server/: main.go
control-plane/internal/api/: handlers.go  router.go
control-plane/internal/orchestrator/: orchestrator.go
control-plane/internal/pkg/k8sclient/: client.go
control-plane/internal/provisioner/: provisioner.go
control-plane/internal/repository/: postgres.go
control-plane/pkg/k8sclient/: client.go
infra/ansible/playbooks/: k3s-install.yml
infra/terraform/: backend.tf
k8s/argocd/applications/: idp-platform.yaml
k8s/base/control-plane/: deployment.yaml
ml-cost-engine/: Dockerfile  pyproject.toml
ml-cost-engine/src/anomaly/: detector.py
ml-cost-engine/src/api/: main.py
ml-cost-engine/src/predictor/: predictor.py
