[project]
name = "ml-cost-engine"
version = "0.1.0"
description = "ML-based cloud cost prediction and anomaly detection"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "prometheus-client>=0.17.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
